add 'updateFile' and 'versions' method in API
