# src/controllers/FileSystem.js
@@ -1,6 +1,12 @@
 import utils from '../utils/writer';
 import {
-  CreateFolder, GetFolder, DownloadFile, UploadFile, Search,
+  CreateFolder,
+  DownloadFile,
+  GetFolder,
+  Search,
+  UpdateFile,
+  UploadFile,
+  Versions
 } from '../service/FileSystemService';
 
 export const createFolder = (req, res) => {
@@ -53,6 +59,19 @@ export const uploadFile = (req, res) => {
     });
 };
 
+export const updateFile = (req, res, next) => {
+  const token = req.headers.authorization;
+  const hash = req.swagger.params.hash.value;
+  const file = req.swagger.params.file.value;
+  UpdateFile(hash, file, token)
+    .then(function(response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function(response) {
+      utils.writeJson(res, response);
+    });
+};
+
 export const search = (req, res) => {
   const token = req.headers.authorization;
   const name = req.swagger.params.name.value;
@@ -61,6 +80,18 @@ export const search = (req, res) => {
       utils.writeJson(res, response);
     })
     .catch((response) => {
+      utils.writeJson(res, response);
+    });
+};
+
+export const versions = (req, res, next) => {
+  const token = req.headers.authorization;
+  const hash = req.swagger.params.hash.value;
+  Versions(hash, token)
+    .then(function(response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function(response) {
       utils.writeJson(res, response);
     });
 };
